# backend/app/domain/model/program.go
@@ -1,0 +1,31 @@
+package model
+
+import "time"
+
+type Program struct {
+	ID           int           `gorm:"column:id; primary_key; not null" json:"id"`
+	Name         string        `gorm:"column:name;" json:"name"`
+	ProgramCodes []ProgramCode `gorm:"foreignkey:ProgramId" json:"program_codes"`
+	BaseModel
+}
+
+type ProgramCode struct {
+	ID                   int                   `gorm:"column:id; primary_key; not null" json:"id"`
+	Name                 string                `gorm:"column:name;" json:"name"`
+	ProgramId            int                   `gorm:"column:program_id;" json:"program_id"`
+	Year                 int                   `gorm:"column:year;" json:"year"`
+	ProgramCodeReminders []ProgramCodeReminder `gorm:"foreignkey:ProgramCodeId" json:"program_code_reminders"`
+	BaseModel
+}
+
+type ProgramCodeReminder struct {
+	ID            int       `gorm:"column:id; primary_key; not null" json:"id"`
+	ProgramCodeId int       `gorm:"column:program_code_id;" json:"program_code_id"`
+	Sample        int       `gorm:"column:sample;" json:"sample"`
+	DateOfReceive time.Time `gorm:"column:date_of_receive;" json:"date_of_receive"`
+	DateOfReturn  time.Time `gorm:"column:date_of_return;" json:"date_of_return"`
+	IsDefault     bool      `gorm:"column:is_default;default: false" json:"is_default"`
+	Status        int       `gorm:"column:status;default: 0" json:"status"`
+	PercentPassed int       `gorm:"column:percent_passed;" json:"percent_passed"`
+	BaseModel
+}
