# backend/app/router/program_router.go
@@ -1,0 +1,12 @@
+package router
+
+import (
+	"EQA/backend/app/controller"
+
+	"github.com/gin-gonic/gin"
+)
+
+func SetupProgram(c *gin.RouterGroup, ctrl controller.ProgramController) {
+	router := c.Group("/programs")
+	router.GET("", ctrl.GetAll)
+}
